# WEB_Python17M4_part1

./: Dockerfile  main.py  pyproject.toml  socket_client.py  socket_server.py
storage/: data.json
